# sofia-sip

./: .drone.yml  .gitignore  .update  CMakeLists.txt  README  RELEASE  SECURITY.md  bootstrap.sh  config.h.cmake  configure.ac  sofia-sip.spec  tests.sh
.github/docker/centos/7/amd64/: Dockerfile
.github/docker/debian/bookworm/amd64/: Dockerfile
.github/docker/debian/bookworm/arm32v7/: Dockerfile  fsa.release.Dockerfile
.github/docker/debian/bookworm/arm64v8/: Dockerfile
.github/docker/debian/bullseye/amd64/: Dockerfile  fse.unstable.Dockerfile
.github/docker/debian/bullseye/arm32v7/: Dockerfile  fse.unstable.Dockerfile
.github/docker/debian/bullseye/arm64v8/: Dockerfile  fsa.unstable.Dockerfile
.github/docker/debian/buster/amd64/: Dockerfile
.github/docker/debian/buster/arm32v7/: Dockerfile
.github/docker/debian/buster/arm64v8/: Dockerfile
.github/docker/debian/trixie/amd64/: Dockerfile
.github/docker/debian/trixie/arm32v7/: Dockerfile
.github/docker/debian/trixie/arm64v8/: Dockerfile
.github/workflows/: all.yml  build.yml  build.yml.disable  cicd.yml  deb-amd64.yaml  deb-arm.yaml  deb.yaml  deb.yml  e2e.yml  rpm.yml  scan-build.yml  unit-test.yml
cmake/: awk.cmake  glib.cmake  inline.cmake  openssl.cmake  pthread.cmake  size_compat.cmake  sofia.cmake  utils.cmake
debian/: changelog  control  copyright  libsofia-sip-ua-dev.install  libsofia-sip-ua-glib-dev.install  rules
libsofia-sip-ua/: CMakeLists.txt
libsofia-sip-ua-glib/: CMakeLists.txt
libsofia-sip-ua-glib/su-glib/: CMakeLists.txt  su_source.c
libsofia-sip-ua/bnf/: CMakeLists.txt  bnf.c
libsofia-sip-ua/bnf/sofia-sip/: bnf.h
libsofia-sip-ua/docs/: mainpage.docs
libsofia-sip-ua/features/: CMakeLists.txt
libsofia-sip-ua/http/: CMakeLists.txt  http_parser.c  test_http.c
libsofia-sip-ua/http/sofia-sip/: http_parser.h
libsofia-sip-ua/ipt/: CMakeLists.txt
libsofia-sip-ua/iptsec/: CMakeLists.txt  auth_client.c  auth_digest.c  auth_module.c  test_auth_digest.c
libsofia-sip-ua/iptsec/sofia-sip/: auth_digest.h
libsofia-sip-ua/msg/: CMakeLists.txt  msg.c  msg_date.c  msg_internal.h  msg_mime.c  msg_parser.c  msg_parser_util.c  test_msg.c
libsofia-sip-ua/msg/sofia-sip/: msg.h  msg_parser.h  msg_types.h
libsofia-sip-ua/nea/: CMakeLists.txt  nea_server.c
libsofia-sip-ua/nta/: CMakeLists.txt  Makefile.am  nta.c  nta_tag.c  sl_read_payload.c
libsofia-sip-ua/nta/sofia-sip/: nta.h  nta_tag.h
libsofia-sip-ua/nth/: CMakeLists.txt
libsofia-sip-ua/nua/: CMakeLists.txt  nua.c  nua_client.c  nua_common.c  nua_dialog.c  nua_dialog.h  nua_params.c  nua_params.h  nua_register.c  nua_server.c  nua_session.c  nua_stack.c  nua_stack.h  nua_tag.c
libsofia-sip-ua/nua/sofia-sip/: nua.h  nua_tag.h
libsofia-sip-ua/sdp/: CMakeLists.txt  sdp.c  sdp_parse.c  sdp_print.c  torture_sdp.c
libsofia-sip-ua/sdp/sofia-sip/: sdp.h
libsofia-sip-ua/sip/: CMakeLists.txt  sip_basic.c  sip_parser.c  sip_status.c  sip_util.c  test_sip_msg.c  torture_sip.c
libsofia-sip-ua/sip/sofia-sip/: sip.h  sip_header.h
libsofia-sip-ua/soa/: CMakeLists.txt  soa.c  soa_static.c  test_soa.c
libsofia-sip-ua/soa/sofia-sip/: soa_tag.h
libsofia-sip-ua/sresolv/: CMakeLists.txt  check_sres_sip.c  sres.c  sres_blocking.c  sres_sip.c  test_sresolv.c  torture_sresolv.c
libsofia-sip-ua/sresolv/sofia-resolv/: sres.h
libsofia-sip-ua/stun/: CMakeLists.txt  stun.c  stun_common.c  stun_dns.c  stun_internal.h  stunc
libsofia-sip-ua/stun/sofia-sip/: stun_common.h
libsofia-sip-ua/su/: CMakeLists.txt  su_alloc.c  su_localinfo.c  su_proxy.c  su_select_port.c  su_taglist.c  su_timer.c  test_memmem.c  torture_su_alloc.c  torture_su_tag.c  torture_su_timer.c
libsofia-sip-ua/su/sofia-sip/: htable.h  su_alloc.h  su_configure.h.cmake  su_tag_inline.h  tstdef.h
libsofia-sip-ua/tport/: CMakeLists.txt  test_tport.c  tport.c  tport_internal.h  tport_logging.c  tport_tag.c  tport_tls.c  tport_tls.h  tport_type_tcp.c  tport_type_tls.c  tport_type_udp.c  tport_type_ws.c  tport_ws.h  ws.c  ws.h
libsofia-sip-ua/tport/sofia-sip/: tport.h  tport_tag.h
libsofia-sip-ua/url/: CMakeLists.txt  torture_url.c  url.c
open_c/: config.h.in
s2check/: CMakeLists.txt  s2dns.c
tests/: CMakeLists.txt  test_ops.c
tests/unit/: collect-test-logs.sh
utils/: CMakeLists.txt  Doxyfile.in  sip-dig.c
win32/libsofia-sip-ua/: libsofia_sip_ua.vcproj
win32/libsofia-sip-ua-static/: libsofia_sip_ua_static.vcproj
win32/sofia-sip/: su_configure.h
