set(sofia_modules bnf features ipt iptsec msg nea nta nua sdp sip soa sresolv su tport url)

if (HAVE_STUN)
    set(stun_module stun)
    list(APPEND sofia_modules stun)
else (HAVE_STUN)
    unset(stun_module)
endif (HAVE_STUN)
if (HAVE_NTH)
    set(nth_module  nth)
    set(http_module http)
    list(APPEND sofia_modules nth http)
else (HAVE_NTH)
    unset(nth_module)
    unset(http_module)
endif (HAVE_NTH)

foreach (_dir ${sofia_modules})
    set(${_dir}_include_dirs ${CMAKE_CURRENT_SOURCE_DIR}/${_dir} ${CMAKE_CURRENT_BINARY_DIR}/${_dir})
    list(APPEND INTERNAL_INCLUDE_DIRS ${${_dir}_include_dirs})
    include_directories(${${_dir}_include_dirs})
endforeach (_dir)
set(INTERNAL_INCLUDE_DIRS ${INTERNAL_INCLUDE_DIRS} PARENT_SCOPE)
foreach (_dir ${sofia_modules})
    add_subdirectory(${_dir})
endforeach (_dir)

add_library(sofia-sip-ua SHARED)
target_link_libraries(sofia-sip-ua empty)
target_link_libraries(sofia-sip-ua -Wl,--whole-archive ${sofia_modules} -Wl,--no-whole-archive)
